--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,31 @@
 version: '3'
 services:
   db:
-    image: postgres
+    image: postgres:10
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
-      - .:/myapp
+      - app-data:/myapp
     ports:
       - "3000:3000"
     depends_on:
       - db
-  sidekiq:
+  sidekiq: 
     build: .
     command: bundle exec sidekiq
     depends_on:
       - db
       - redis
     volumes:
-      - .:/app
+      - app-data:/myapp
     env_file:
       - .env
   redis:
     image: redis:latest
+
+volumes: 
+  db-data:
+  app-data:
