--- a/test/fixtures/departements.yml
+++ b/test/fixtures/departements.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  text: MyText
+  code: MyString
+  name: MyString
+  region: one
 
 two:
-  title: MyString
-  text: MyText
+  code: MyString
+  name: MyString
+  region: two
