--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,24 +8,27 @@ services:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
-      - app-data:/myapp
+      - .:/myapp:cached
     ports:
       - "3000:3000"
     depends_on:
       - db
+      - redis
   sidekiq: 
-    build: .
+    image: sebastien
     command: bundle exec sidekiq
     depends_on:
       - db
       - redis
     volumes:
-      - app-data:/myapp
+      - .:/myapp:cached
     env_file:
       - .env
   redis:
     image: redis:latest
+    volumes: 
+      - redis-data:/data
 
 volumes: 
   db-data:
-  app-data:
+  redis-data:
