--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: '3.6'
 services:
   db:
     image: postgres:10
+    environment: 
+    - POSTGRES_USER:"foo"
+    - POSTGRES_PASSWORD:"foobar"
     volumes:
-      - db-data:/var/lib/postgresql/data
+     - db-data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+     - "5432:5432" 
   web:
     image: sebastien
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
