--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,35 @@
-version: '3.6'
+version: '3.3'
 services:
-  db:
+  ilovepostgresql:
     image: postgres:10
     environment: 
-    - POSTGRES_USER:"foo"
-    - POSTGRES_PASSWORD:"foobar"
+    - POSTGRES_USER:"hello"
+    - POSTGRES_PASSWORD:"world"
     volumes:
-     - db-data:/var/lib/postgresql/data
+     - ./db-data/:/var/lib/postgresql/data
     ports:
-     - "5432:5432" 
-  web:
+     - "10257:5432" 
+  anotherrubyapp:
     image: sebastien
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bundle exec rails s -p 8741 -b '0.0.0.0'
     volumes:
-      - .:/myapp:cached
+      - .:/myapp
     ports:
-      - "3000:3000"
+      - "5532:8741"
     depends_on:
-      - db
-      - redis
-  sidekiq: 
+      - ilovepostgresql
+      - mylocalredis
+  awesomebackgroundjobs: 
     image: sebastien
     command: bundle exec sidekiq
     depends_on:
-      - db
-      - redis
+      - ilovepostgresql
+      - mylocalredis
     volumes:
-      - .:/myapp:cached
-  redis:
+      - .:/myapp
+  mylocalredis:
     image: redis:latest
     volumes: 
-      - redis-data:/data
-
-volumes: 
-  db-data:
-  redis-data:
+      - ./redis-data/:/data
+    ports: 
+      - 10247:6379
